typescript/checker/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty4.ts.stderr
error: ClassPropertyInitRequired {
    span: Span {
        lo: BytePos(
            108,
        ),
        hi: BytePos(
            134,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty4.ts:3:5
  |
3 |     [Symbol.isRegExp]: string;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

